fix: change color of text on dark mode

--- a/changeColor.css
+++ b/changeColor.css
@@ -24,7 +24,7 @@
   }
   .theme-block.nightMode {
     background: #1d1612 !important;
-    color: #000 !important;
+    color: #725d49 !important;
   }
   .theme-button.dayMode {
     border: 1px solid #000 !important;
